<resources>
    <string name="app_name">Monty App</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgot">¿Olvidaste la contraseña?</string>
    <string name="login">Entrar</string>
    <string name="entry_login">¿No tienes cuenta?</string>
    <string name="home">Inicio</string>
    <string name="shopping">Articulos</string>
    <string name="profile">Mi perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Ajustes</string>
    <string name="welcome">Bienvenido</string>
    <string name="create">Crea tu cuenta</string>
    <string name="send">Mandar</string>
    <string name="put_adress">Ingresa tu correo</string>
    <string name="continue_login">Continuar sin cuenta</string>
    <string name="info">Informacion</string>
    <string name="press">Presiona para más información</string>
    <string name="details">Detalles</string>
    <string name="number">Manda mensaje para cotizar</string>
</resources>